# http_log_analyzer_task

./: README.md
src/: .env.example  .gitignore  main.py  pipeline.py  pyproject.toml  settings.py
src/app/estimators/: __init__.py  base_overload_hour_estimator.py  hyperloglog_estimator.py  naive_estimator.py
src/app/models/: __init__.py  http_log_record.py  http_server_error_log_record.py
src/app/services/: __init__.py  http_overloading_period_analyzer.py  stdin_log_client.py
src/app/services/socket/: client.py  server.py
src/app/utils/: __init__.py  configure_logging.py
src/log_record_generators/: fake_log_generator_v1.sh  fake_log_generator_v2.sh
src/tests/: test_http_log_record.py  test_http_server_error_log_record.py  test_hyperloglog_estimator.py  test_naive_estimator.py  test_overloading_period_analyzer.py
